<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stashevskiy.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle"
                android:text="@string/name_team_a"/>

            <TextView
                android:id="@+id/team_a_score"
                style="@style/TextStyleScore"
                android:text="@string/score_zero"/>

            <Button
                android:onClick="onClick"
                android:id="@+id/btn_three_for_team_A"
                style="@style/ButtonStyle"
                android:text="@string/score_three"/>

            <Button
                android:onClick="onClick"
                android:id="@+id/btn_two_for_team_A"
                style="@style/ButtonStyle"
                android:text="@string/score_two"/>

            <Button
                android:onClick="onClick"
                android:id="@+id/btn_free_for_team_A"
                style="@style/ButtonStyle"
                android:text="@string/free_throw"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray">
        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle"
                android:text="@string/name_team_b"/>

            <TextView
                android:id="@+id/team_b_score"
                style="@style/TextStyleScore"
                android:text="@string/score_zero"/>

            <Button
                android:onClick="onClick"
                android:id="@+id/btn_three_for_team_B"
                style="@style/ButtonStyle"
                android:text="@string/score_three"/>

            <Button
                android:onClick="onClick"
                android:id="@+id/btn_two_for_team_B"
                style="@style/ButtonStyle"
                android:text="@string/score_two"/>

            <Button
                android:onClick="onClick"
                android:id="@+id/btn_free_for_team_B"
                style="@style/ButtonStyle"
                android:text="@string/free_throw"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:onClick="onClick"
        android:id="@+id/btn_reset"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/all_reset"/>

</RelativeLayout>
